# openthread-sleepy-sensor

./: .gitignore  CMakeLists.txt  README.md  calibration.txt  calibration.txt.example  flash_and_monitor.py  partitions.csv  partitions.matter.csv  sdkconfig  sdkconfig.defaults  secrets.yaml.example
.devcontainer/: devcontainer.json  setup.sh
components/i2cdev/: CMakeLists.txt  i2cdev.h
components/sht3x/: sht3x.c  sht3x.h
docs/: Datasheet_SHT3x_DIS.txt  SHT4x_in_humidity_env.txt  Sensirion_Humidity_Temperature_Design_Guide.txt  power-usage-from-usb.ods
main/: CMakeLists.txt  calibration.h  common_utils.cpp  common_utils.h  errortask.cpp  errortask.h  idf_component.yml  main.cpp  matter_sensor.cpp  matter_sensor.h  mqtt_sender.cpp  mqtt_sender.h  ot_aloc.h  secrets.h  sensorstask.cpp  sensorstask.h
main/net/: network_link.cpp  network_link.h  openthread_link.cpp  openthread_link.h  wifi_link.cpp  wifi_link.h
